[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.1.0"
description = "A hello-world package for GitHub"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kenta Ogawa", email = "gakenshizu1199@gmail.com" }]
dependencies = [
]

[tool.setuptools.packages.find]
where = ["hello-world"]

[project.urls]
"Homepage" = "https://github.com/ogaken1104/hello-world"
"Repository" = "https://githubß.com/ogaken1104/hello-world.git"
